--- a/app/desktop/electron-app/src/static/app.html
+++ b/app/desktop/electron-app/src/static/app.html
@@ -12,7 +12,22 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col px-0">
-      <h1>Hello World</h1>
+      <ul class="nav nav-pills mb-3 nav-fill bg-light" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-wallet-tab" data-bs-toggle="pill" data-bs-target="#pills-wallet" type="button" role="tab" aria-controls="pills-wallet" aria-selected="false">Wallet</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-settings-tab" data-bs-toggle="pill" data-bs-target="#pills-settings" type="button" role="tab" aria-controls="pills-settings" aria-selected="false">Settings</button>
+        </li>
+      </ul>
+      <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Home</div>
+        <div class="tab-pane" id="pills-wallet" role="tabpanel" aria-labelledby="pills-wallet-tab">Wallet</div>
+        <div class="tab-pane" id="pills-settings" role="tabpanel" aria-labelledby="pills-settings-tab">Settings</div>
+      </div>
     </div>
   </div>
 </div>
